--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Thái Thành Công</h1>
         <h2>29211141385</h2>
-        <img src="/ava.jpg" />
+        <img src="ava.jpg" />
     </div>
 </body>
 </html>
